--- a/PB03_Apache_Content_v2_Loop.yaml
+++ b/PB03_Apache_Content_v2_Loop.yaml
@@ -19,7 +19,7 @@
           ansible.builtin.apt:
             name: apache2
 
-        - name: Copy index.html to servers on Debian
+        - name: Copy files to servers on Debian
           ansible.builtin.copy:
             src: "{{ source_folder }}/{{ item }}"
             dest: "{{ destin_folder }}"
@@ -45,7 +45,7 @@
             name:
               - httpd
 
-        - name: Copy index.html to servers
+        - name: Copy files to servers
           ansible.builtin.copy:
             src: "{{ source_folder }}/{{ item }}"
             dest: "{{ destin_folder }}"
@@ -61,10 +61,3 @@
           ansible.builtin.service:
             name: httpd
             state: restarted
-
-  handlers:
-    - name: Copy index.html to servers
-      ansible.builtin.copy:
-        src: "{{ source_file }}"
-        dest: "{{ destin_file }}"
-        mode: '0664'
