--- a/roles/deploy_apache_web/tasks/main.yml
+++ b/roles/deploy_apache_web/tasks/main.yml
@@ -1,26 +1,66 @@
 ---
 # tasks file for deploy_apache_web
-- name: Create folder
-  ansible.builtin.file:
-    path: "{{ source_folder }}"
-    state: directory
-    mode: '0775'
+- name: Show ansible_os_family
+  ansible.builtin.debug:
+    var: ansible_os_family
 
-- name: Download indexes
-  ansible.builtin.get_url:
-    url: https://raw.githubusercontent.com/fillswim/ansible/master/{{ item }}
-    dest: "{{ source_folder }}/{{ item }}"
-    mode: '0664'
-    loop:
-      - "index1.html"
-      - "index2.html"
-      - "index3.html"
+- name: Block for Debian
+  when: ansible_os_family == "Debian"
+  become: true
+  block:
+    - name: Install Apache WebServer on Debian
+      ansible.builtin.apt:
+        name: apache2
 
-- name: Copy indexes to other folder
-  ansible.builtin.copy:
-    src: "{{ item }}"
-    dest: "{{ destin_folder }}"
-    mode: '0664'
-    remote_src: true
-    with_fileglob:
-      - "{{ source_folder }}/*.*"
+    - name: Generate and copy index.html
+      ansible.builtin.template:
+        src: "index.j2"
+        dest: "{{ destin_folder }}/index.html"
+        mode: '0555'
+
+    - name: Copy pictures to servers on Debian
+      ansible.builtin.copy:
+        src: "{{ item }}"
+        dest: "{{ destin_folder }}"
+        mode: '0664'
+      loop:
+        - "au.png"
+        - "de.png"
+        - "fr.png"
+        - "gb.png"
+
+    - name: Restart Apache for Debian
+      ansible.builtin.service:
+        name: apache2
+        state: restarted
+
+- name: Block for RedHat
+  when: ansible_os_family == "RedHat"
+  become: true
+  block:
+    - name: Install Apache WebServer on RedHat
+      ansible.builtin.yum:
+        name:
+          - httpd
+
+    - name: Generate and copy index.html
+      ansible.builtin.template:
+        src: "index.j2"
+        dest: "{{ destin_folder }}/index.html"
+        mode: '0555'
+
+    - name: Copy pictures to servers
+      ansible.builtin.copy:
+        src: "{{ item }}"
+        dest: "{{ destin_folder }}"
+        mode: '0664'
+      loop:
+        - "au.png"
+        - "de.png"
+        - "fr.png"
+        - "gb.png"
+
+    - name: Restart Apache Handler for RedHat
+      ansible.builtin.service:
+        name: httpd
+        state: restarted
