--- a/PB_Apache_Stop.yaml
+++ b/PB_Apache_Stop.yaml
@@ -4,6 +4,7 @@
 
   tasks:
     - name: Stop Apache
+      become: true
       ansible.builtin.service:
         name: apache2
         state: stopped
