--- a/Helm_Template_Install.yml
+++ b/Helm_Template_Install.yml
@@ -3,6 +3,7 @@
   hosts: k8s_master1
 
 # ansible-playbook Helm_Template_Install.yml --extra-var "helm_name=my-nginx helm_namespace=default file=/home/fill/K8SManifests/HelmChart_values_nginx.yaml"
+# ansible-playbook Helm_Template_Install.yml --extra-var "helm_name=my-gifservice helm_namespace=default file=/home/fill/K8SManifests/HelmChart_values_gifservice.yaml"
 
   tasks:
     - name: Helm install
