--- a/Ping.yml
+++ b/Ping.yml
@@ -1,6 +1,8 @@
 ---
 - name: Test connection to my servers
-  hosts: k8s_servers
+  hosts: intellij
+  # hosts: 127.0.0.1
+  # connection: local # ansible-playbook Ping.yml -b -K
 
   tasks:
     - name: Ping my servers
