--- a/Roles_00-Prepare-VM.yaml
+++ b/Roles_00-Prepare-VM.yaml
@@ -2,6 +2,11 @@
 # Запуск по sshpass:
 # ansible-playbook -i hosts_k8s_alma.txt Roles_00-Prepare-VM.yaml -kK
 # ansible-playbook -i hosts_k8s_alma.yaml Roles_00-Prepare-VM.yaml -kK
+# ansible-playbook -i hosts_all.txt Roles_00-Prepare-VM.yaml -kK
+
+# Запуск с уже скопированнными ключами:
+# ansible-playbook -i hosts_all.txt Roles_00-Prepare-VM.yaml
+
 
 - name: Prepare VM
   hosts: "all"
