--- a/roles/00-prepare-vm/tasks/main.yml
+++ b/roles/00-prepare-vm/tasks/main.yml
@@ -111,6 +111,29 @@
   become: true
   block:
 
+# ======================================= Поменять hostname ========================================
+
+    - name: Поменять hostname
+      become: true
+      ansible.builtin.hostname:
+        name: "{{inventory_hostname}}"
+
+# ===================================== Добавление репозитория =====================================
+
+- name: Добавление ключа и репозитория
+  block:
+    - name: Добавление ключа
+      become: true
+      ansible.builtin.get_url:
+        url: http://192.168.2.45:8081/repository/gpg_keys/myoffline_repository_ubuntu.gpg
+        dest: /etc/apt/trusted.gpg.d/myoffline_repository_ubuntu.gpg
+
+    - name: Добавление репозитория
+      become: true
+      ansible.builtin.apt_repository:
+        repo: "deb http://192.168.2.45:8081/repository/myoffline_repository_ubuntu stable main"
+        state: present
+
 # ========================================= Upgrade system =========================================
 
     - name: Обновление системы Ubuntu
@@ -124,6 +147,16 @@
       ansible.builtin.apt:
         upgrade: dist
       become: true
+
+# ============================= Отключение вводу пароля для пользователей ==========================
+
+    - name: Отключить ввод sudo пароля для fill
+      # become_method: su
+      become: true
+      copy:
+        dest: /etc/sudoers.d/fill
+        content: "fill ALL=(ALL) NOPASSWD:ALL"
+        mode: 0440
 
 # ============================================== DNS ===============================================
 
@@ -141,6 +174,7 @@
       ansible.builtin.command: sudo netplan apply
 
     - name: Restart systemd-resolved
+      become: true
       ansible.builtin.systemd:
         state: restarted
         daemon_reload: true
@@ -175,3 +209,6 @@
   community.general.timezone:
     name: Europe/Moscow
 
+- name: Reboot
+  become: true
+  ansible.builtin.reboot:
