--- a/roles/00-prepare-vm/tasks/main.yml
+++ b/roles/00-prepare-vm/tasks/main.yml
@@ -19,23 +19,26 @@
 
 # ========================================== Add SSH keys ==========================================
 
-#- name: Добавление SSH ключа к пользователю root
-#  ansible.posix.authorized_key:
-#    user: root
-#    state: present
-#    key: '{{ item }}'
-#  with_file:
-#    - /home/fill/.ssh/id_rsa.pub
-#    - /home/fill/.ssh/id_rsa_mypc.pub
+- name: Добавление SSH ключа к пользователю root
+  become: true
+  ansible.posix.authorized_key:
+    user: root
+    state: present
+    key: "{{ item }}"
+  with_file:
+    - /home/fill/.ssh/id_rsa.pub
+    - /home/fill/.ssh/id_rsa_mypc.pub
+    - /home/fill/.ssh/id_rsa_rtdc.pub
 
 - name: Добавление SSH ключа к пользователю fill
   ansible.posix.authorized_key:
     user: fill
     state: present
-    key: '{{ item }}'
+    key: "{{ item }}"
   with_file:
     - /home/fill/.ssh/id_rsa.pub
     - /home/fill/.ssh/id_rsa_mypc.pub
+    - /home/fill/.ssh/id_rsa_rtdc.pub
 
 # ========================================= Блок для RedHat ========================================
 # ==================================================================================================
@@ -44,24 +47,24 @@
   when: ansible_os_family == "RedHat"
   become: true
   block:
+    # ========================================= Upgrade system =========================================
 
-# ========================================= Upgrade system =========================================
+    - name: Обновление системы RedHat
+      throttle: 1
+      ignore_errors: true
+      become: true
+      ansible.builtin.yum:
+        name: "*"
+        state: latest
 
-#    - name: Обновление системы RedHat
-#      ignore_errors: true
-#      become: true
-#      ansible.builtin.yum:
-#        name: '*'
-#        state: latest
-
-# ======================================= Поменять hostname ========================================
+    # ======================================= Поменять hostname ========================================
 
     - name: Поменять hostname
       become: true
       ansible.builtin.hostname:
-        name: "{{inventory_hostname}}"
+        name: "{{ inventory_hostname }}"
 
-# ============================================== DNS ===============================================
+    # ============================================== DNS ===============================================
 
     - name: Скопировать файл ручной настройки DNS
       become: true
@@ -70,9 +73,9 @@
         dest: /etc/NetworkManager/conf.d/90-dns-none.conf
         owner: root
         group: root
-        mode: '0644'
+        mode: "0644"
       notify:
-      - Restart NetworkManager
+        - Restart NetworkManager
 
     - name: Прописать собственные DNS
       become: true
@@ -81,11 +84,11 @@
         dest: /etc/resolv.conf
         owner: root
         group: root
-        mode: '0644'
+        mode: "0644"
       notify:
-      - Restart NetworkManager
+        - Restart NetworkManager
 
-# ============================================= Chrony =============================================
+    # ============================================= Chrony =============================================
 
     - name: Копирование файла chrony.conf
       become: true
@@ -94,7 +97,7 @@
         dest: /etc/chrony.conf
         owner: root
         group: root
-        mode: '0644'
+        mode: "0644"
 
     - name: Restart NTP Alma
       become: true
@@ -110,15 +113,15 @@
   when: ansible_os_family == "Debian"
   become: true
   block:
+    ## ======================================= Поменять hostname ========================================
+    #
+    #    - name: Поменять hostname
+    #      become: true
+    #      ansible.builtin.hostname:
+    #        name: "{{inventory_hostname}}"
+    #
 
-## ======================================= Поменять hostname ========================================
-#
-#    - name: Поменять hostname
-#      become: true
-#      ansible.builtin.hostname:
-#        name: "{{inventory_hostname}}"
-#
-# ===================================== Добавление репозитория =====================================
+    # ===================================== Добавление репозитория =====================================
 
     - name: Добавление ключа и репозитория
       block:
@@ -134,9 +137,10 @@
         repo: "deb http://192.168.2.45:8081/repository/myoffline_repository_ubuntu stable main"
         state: present
 
-# ========================================= Upgrade system =========================================
+    # ========================================= Upgrade system =========================================
 
     - name: Обновление системы Ubuntu
+      throttle: 1
       ignore_errors: true
       ansible.builtin.apt:
         update_cache: true
@@ -148,17 +152,16 @@
         upgrade: dist
       become: true
 
-# ============================= Отключение вводу пароля для пользователей ==========================
+    # ============================= Отключение вводу пароля для пользователей ==========================
 
     - name: Отключить ввод sudo пароля для fill
-      # become_method: su
       become: true
       copy:
         dest: /etc/sudoers.d/fill
         content: "fill ALL=(ALL) NOPASSWD:ALL"
         mode: 0440
 
-# ============================================== DNS ===============================================
+    # ============================================== DNS ===============================================
 
     - name: Прописать собственные DNS
       become: true
@@ -167,7 +170,7 @@
         dest: /etc/systemd/resolved.conf
         owner: root
         group: root
-        mode: '0644'
+        mode: "0644"
 
     - name: Restart systemd-resolved
       become: true
@@ -176,7 +179,7 @@
         daemon_reload: true
         name: systemd-resolved
 
-# ============================================== NTP ===============================================
+    # ============================================== NTP ===============================================
 
     - name: Install NTP Ubuntu
       become: true
@@ -190,7 +193,7 @@
         dest: /etc/ntp.conf
         owner: root
         group: root
-        mode: '0644'
+        mode: "0644"
 
     - name: Restart NTP Ubuntu
       become: true
@@ -206,5 +209,6 @@
     name: Europe/Moscow
 
 - name: Reboot
+  throttle: 1
   become: true
   ansible.builtin.reboot:
