--- a/roles/03-Install-1st-Master-Node/tasks/main.yml
+++ b/roles/03-Install-1st-Master-Node/tasks/main.yml
@@ -25,3 +25,90 @@
     owner: root
     group: root
     mode: "0644"
+
+- name: Kubeadm Init
+  ansible.builtin.shell: kubeadm init --config /root/kubeadm/kubeadm-config.yaml
+  register: kubeadm_init_result
+  notify:
+    - Restart kubelet
+
+- name: Вывод результатов работы Kubeadm Init
+  ansible.builtin.debug:
+    var: kubeadm_init_result
+
+- name: Создание папки /root/.kube
+  ansible.builtin.file:
+    path: /root/.kube
+    state: directory
+    owner: root
+    group: root
+    mode: "0775"
+
+- name: Install Runc
+  become: true
+  ansible.builtin.copy:
+    src: /etc/kubernetes/admin.conf
+    dest: /root/.kube/config
+    remote_src: true
+    owner: root
+    group: root
+    mode: "0600"
+
+# ======================================= CNI Driver (Calico) ======================================
+
+- name: Install pip for RedHat
+  when: ansible_os_family == "RedHat"
+  become: true
+  ansible.builtin.dnf:
+    name: python3-pip
+    state: present
+
+- name: Install pip for Ubuntu
+  when: ansible_os_family == "Ubuntu"
+  become: true
+  ansible.builtin.apt:
+    name: python3-pip
+    state: present
+
+- name: Install pre-requisites for kubernetes.core.k8s
+  ansible.builtin.pip:
+    name:
+      - pyyaml
+      - kubernetes
+      - jsonpatch
+
+- name: Download Tigera Calico operator
+  ansible.builtin.get_url:
+    url: "{{ calico_operator_link }}"
+    dest: ~/download/tigera-operator.yaml
+    owner: root
+    group: root
+    mode: "0644"
+
+- name: Apply Tigera Calico operator
+  kubernetes.core.k8s:
+    src: ~/download/tigera-operator.yaml
+    state: present
+
+- name: Copy calico-install.yaml
+  become: true
+  ansible.builtin.template:
+    src: calico-install.yaml.j2
+    dest: ~/kubeadm/calico-install.yaml
+    owner: root
+    group: root
+    mode: "0644"
+
+- name: Apply Calico
+  kubernetes.core.k8s:
+    src: ~/kubeadm/calico-install.yaml
+    state: present
+  notify:
+    - Restart kubelet
+
+# ============================================= Reboot =============================================
+
+- name: Reboot
+  throttle: 1
+  become: true
+  ansible.builtin.reboot:
