--- a/roles/03-Install-1st-Master-Node/handlers/main.yml
+++ b/roles/03-Install-1st-Master-Node/handlers/main.yml
@@ -1,2 +1,8 @@
 ---
 # handlers file for 03-Install-1st-Master-Node
+
+- name: Restart kubelet
+  become: true
+  ansible.builtin.service:
+    state: restarted
+    name: kubelet
