--- a/roles/03-Install-1st-Control-Node/tasks/main.yml
+++ b/roles/03-Install-1st-Control-Node/tasks/main.yml
@@ -10,11 +10,11 @@
 # ======================== Checking that the cluster has already been created ======================
 
 - name: Checking that the cluster has already been created
-  stat:
+  ansible.builtin.stat:
     path: "/etc/kubernetes/pki/ca.key"
   register: kubeadm_ca
 
-- meta: end_play
+- ansible.builtin.meta: end_play
   when: kubeadm_ca.stat.exists
 
 # ==================================== Apply kubeadm-config.yaml ===================================
@@ -54,7 +54,7 @@
     group: root
     mode: "0775"
 
-- name: Install Runc
+- name: Copy /etc/kubernetes/admin.conf to /root/.kube/config
   become: true
   ansible.builtin.copy:
     src: /etc/kubernetes/admin.conf
@@ -131,6 +131,7 @@
   kubernetes.core.k8s:
     src: ~/kubeadm/nodelocaldns-daemonset.yaml
     state: present
+
 # ============================================= Reboot =============================================
 
 - name: Reboot
