--- a/Role_06-Delete-Node.yaml
+++ b/Role_06-Delete-Node.yaml
@@ -1,6 +1,7 @@
 ---
 - name: Delete Node
-  order: sorted
+  order: sorted             # Выполняется на хостах в алфовитном порядке
+  serial: 1                 # Выполняется только на одном хосту одновременно
   hosts: "all"
 
   roles:
