--- a/roles/04-Adding-Other-Control-Nodes/tasks/02-Join-Control-Nodes.yaml
+++ b/roles/04-Adding-Other-Control-Nodes/tasks/02-Join-Control-Nodes.yaml
@@ -1,7 +1,7 @@
 ---
 # ============================================== Ping ==============================================
 
-- name: Ping
+- name: Ping X
   become: true
   ansible.builtin.ping:
 
@@ -14,7 +14,7 @@
 
 - name: Join control node {{ inventory_hostname }}
   when: not kubeadm_ca.stat.exists
-  ansible.builtin.hell:
+  ansible.builtin.shell:
     cmd: |
       kubeadm join {{ hostvars[groups['k8s_masters'][0]].join_path }} \
       --token {{ hostvars[groups['k8s_masters'][0]].join_token }} \
