--- a/roles/04-Adding-Other-Control-Nodes/tasks/main.yml
+++ b/roles/04-Adding-Other-Control-Nodes/tasks/main.yml
@@ -7,7 +7,8 @@
 
 - name: Join other Control nodes
   ansible.builtin.include_tasks: 02-Join-Control-Nodes.yaml
-  when: inventory_hostname != groups['k8s_masters'][0]
+  # when: inventory_hostname != groups['k8s_masters'][0]
+  when: inventory_hostname in added_control_nodes | default(groups['k8s_masters'][1:])
 
 - name: General yaml
   ansible.builtin.include_tasks: 03-General.yaml
