--- a/roles/06-Delete-Node/tasks/main.yml
+++ b/roles/06-Delete-Node/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 # tasks file for 06-Delete-Control-Node
 
-## ================================== Проверка, что нода существует =================================
+# ================================== Проверка, что нода существует =================================
 
 - name: Завершение выполнение плэйбука, так как удаляемая нода не найдена
   ansible.builtin.meta: end_play
@@ -9,7 +9,7 @@
     - deleted_nodes not in groups['k8s_masters']          # Если хоста нет в группе k8s_masters
     - deleted_nodes not in groups['k8s_workers']          # Если хоста нет в группе k8s_workers
 
-## ============================================== Ping ==============================================
+# ============================================== Ping ==============================================
 
 - name: Ping any Master
   become: true
@@ -21,7 +21,7 @@
   ansible.builtin.ping:
   when: inventory_hostname in deleted_nodes
 
-## ========================================= kubectl delete =========================================
+# ========================================= kubectl delete =========================================
 
 - name: Block kubectl delete
   become: true
