--- a/inventory/all_vms.ini
+++ b/inventory/all_vms.ini
@@ -5,10 +5,6 @@
 # ansible-client1                 ansible_host=192.168.2.22
 # rhel9                           ansible_host=192.168.2.25
 
-# jenkins_master                  ansible_host=192.168.2.50
-# jenkins-node1                   ansible_host=192.168.2.51
-# jenkins_builder                 ansible_host=192.168.2.55
-
 # ntp                             ansible_host=192.168.2.58
 # nfs                             ansible_host=192.168.2.59
 
@@ -25,4 +21,4 @@
 # graylog.fillswim.local          ansible_host=192.168.2.46
 # alt10graylog.fillswim.local     ansible_host=192.168.2.135
 
-terraform.fillswim.local        ansible_host=192.168.2.53
+# terraform.fillswim.local        ansible_host=192.168.2.53
