--- a/roles/06-Delete-Node/tasks/main.yml
+++ b/roles/06-Delete-Node/tasks/main.yml
@@ -3,43 +3,79 @@
 
 # ================================== Проверка, что нода существует =================================
 
-- name: Завершение выполнение плэйбука, так как удаляемая нода не найдена
+- name: Завершение выполнение плэйбука, так как extra_vars deleted_node не определена или не найдена в inventory
   ansible.builtin.meta: end_play
+  when: # extra_vars deleted_node не определен или ноды нет ни в k8s_masters, ни в k8s_workers
+    - (deleted_node is undefined) 
+      or 
+      ((deleted_node is defined) 
+      and 
+      ((deleted_node not in groups['k8s_masters']) and (deleted_node not in groups['k8s_workers'])))
+
+## ============================================== Ping ==============================================
+#
+#- name: Ping any Master
+#  become: true
+#  ansible.builtin.ping:
+#  when: inventory_hostname in groups['k8s_masters']
+#
+#- name: Ping Deleted Worker
+#  become: true
+#  ansible.builtin.ping:
+#  when: inventory_hostname in deleted_node
+
+# =============================== Проверка, что нода имеется в кластере =============================
+
+- name: Block on the 1-st Master
+  become: true
   when:
-    - deleted_nodes not in groups['k8s_masters']          # Если хоста нет в группе k8s_masters
-    - deleted_nodes not in groups['k8s_workers']          # Если хоста нет в группе k8s_workers
+    - inventory_hostname == groups['k8s_masters'][0]      # Выполняется только на 1-м Мастере
+  block:
 
-# ============================================== Ping ==============================================
+    # ====================== Get all nodes ======================
 
-- name: Ping any Master
-  become: true
-  ansible.builtin.ping:
-  when: inventory_hostname in groups['k8s_masters']
+    - name: Get all added nodes
+      ignore_errors: true
+      changed_when: false
+      ansible.builtin.shell: |
+        kubectl get nodes --no-headers | awk '{print $1}'
+      register: all_nodes
 
-- name: Ping Deleted Worker
-  become: true
-  ansible.builtin.ping:
-  when: inventory_hostname in deleted_nodes
+    - name: Create variable all_nodes
+      ansible.builtin.set_fact:
+        all_nodes: "{{ all_nodes.stdout }}"
+
+    - name: Show all_nodes
+      ansible.builtin.debug:
+        var: all_nodes
+
+    # ============ Проверка, что нода имеется в кластере ==============
+
+    - name: Завершение выполнение плэйбука, так как удаляемой ноды нет в кластере
+      ansible.builtin.meta: end_play
+      when: # extra_vars added_node определен и added_node уже находится в перечне нод кластера
+        - inventory_hostname not in all_nodes
 
 # ========================================= kubectl delete =========================================
 
 - name: Block kubectl delete
   become: true
   when:
-    - inventory_hostname in groups['k8s_masters']         # Выполняется на хостах из группы Masters,
-    - inventory_hostname not in deleted_nodes             # но не на удаляемом хосте
+    - inventory_hostname in hostvars[groups['k8s_masters'][0]].all_nodes    # Выполняется на хосте, который в кластере
+    - inventory_hostname in groups['k8s_masters']                           # из группы Masters,
+    - inventory_hostname not in deleted_node                                # но не на удаляемом хосте
   block:
 
     - name: Checking that the node exists
       ignore_errors: true
       changed_when: false
       ansible.builtin.shell: |
-        kubectl get nodes --no-headers | awk '{print $1}' | grep "{{ deleted_nodes }}"
+        kubectl get nodes --no-headers | awk '{print $1}' | grep "{{ deleted_node }}"
       register: checking_node_exists_output
 
-    - name: Kubectl delete node {{ deleted_nodes }}
+    - name: Kubectl delete node {{ deleted_node }}
       ansible.builtin.shell: |
-        kubectl delete node "{{ deleted_nodes }}"
+        kubectl delete node "{{ deleted_node }}"
       register: kubectl_delete_node_output
       when:
         - checking_node_exists_output.stdout != ""
@@ -55,9 +91,10 @@
 - name: Block Delete ETCD Member
   become: true
   when:
-    - "'master' in deleted_nodes"                         # Выполняется только если происходит удаление Master ноды
-    - inventory_hostname in groups['k8s_masters']         # Выполняется на хостах из группы Masters,
-    - inventory_hostname not in deleted_nodes             # но не на удаляемом хосте
+    - inventory_hostname in hostvars[groups['k8s_masters'][0]].all_nodes    # Выполняется на хосте, который в кластере
+    - "'master' in deleted_node"                                            # если происходит удаление Master ноды
+    - inventory_hostname in groups['k8s_masters']                           # Выполняется на хостах из группы Masters,
+    - inventory_hostname not in deleted_node                                # но не на удаляемом хосте
   block:
 
     - name: Get deleted ETCD member ID
@@ -69,7 +106,7 @@
         --key /etc/kubernetes/pki/etcd/server.key \
         --cert /etc/kubernetes/pki/etcd/server.crt \
         --write-out=simple \
-        member list | grep {{ deleted_nodes }} | awk '{print $1}' | sed 's/.$//'
+        member list | grep {{ deleted_node }} | awk '{print $1}' | sed 's/.$//'
       register: deleted_etcd_member_id_output
 
     - name: Переопределить переменную deleted_etcd_member_id
@@ -107,4 +144,4 @@
 - name: Kubeadm reset
   become: true
   ansible.builtin.shell: kubeadm reset --force
-  when: inventory_hostname in deleted_nodes
+  when: inventory_hostname in deleted_node                              # Выполняется на удаляемом хосте
