--- a/inventory/k8s2_rhel.yaml
+++ b/inventory/k8s2_rhel.yaml
@@ -1,5 +1,5 @@
 # Control nodes
-k8s_masters:
+k8s_masters:                            # Не менять, используется в ролях
   hosts:
     k8s2-rhel-master1.fillswim.local:
       ansible_host: 192.168.2.221
@@ -9,14 +9,14 @@ k8s_masters:
       ansible_host: 192.168.2.223
 
 # Worker nodes
-k8s_workers:
+k8s_workers:                            # Не менять, используется в ролях
   hosts:
     k8s2-rhel-worker1.fillswim.local:
       ansible_host: 192.168.2.224
     k8s2-rhel-worker2.fillswim.local:
       ansible_host: 192.168.2.225
 
-k8s2_rhel_cluster:
+k8s2_rhel_cluster:                      # Можно менять, после этого создать файл в group_vars
   children:
     k8s_masters:
     k8s_workers:
