--- a/Role_03-Install-1st-Control-Node.yaml
+++ b/Role_03-Install-1st-Control-Node.yaml
@@ -1,8 +1,7 @@
 ---
 
 - name: Install 1st Control Node
-  hosts: k8s2_rhel_masters[0]
+  hosts: k8s_masters[0]
 
   roles:
     - role: 03-Install-1st-Control-Node
-      # when: "'master1' in ansible_hostname"
