--- a/inventory/k8s1_rhel.yaml
+++ b/inventory/k8s1_rhel.yaml
@@ -1,24 +1,22 @@
 # Control nodes
-k8s1_rhel_masters:
+k8s_masters:
   hosts:
-    k8s-rhel-master1.fillswim.local:
+    k8s1-rhel-master1.fillswim.local:
       ansible_host: 192.168.2.211
-#    k8s-rhel-master2.fillswim.local:
-#      ansible_host: 192.168.2.202
-#    k8s-rhel-master3.fillswim.local:
-#      ansible_host: 192.168.2.203
+    k8s1-rhel-master2.fillswim.local:
+      ansible_host: 192.168.2.212
+    k8s1-rhel-master3.fillswim.local:
+      ansible_host: 192.168.2.213
 
 # Worker nodes
-#k8s1_rhel_workers:
-#  hosts:
-#    k8s-rhel-worker1.fillswim.local:
-#      ansible_host: 192.168.2.204
-#    k8s-rhel-worker2.fillswim.local:
-#      ansible_host: 192.168.2.205
-#    k8s-rhel-worker3.fillswim.local:
-#      ansible_host: 192.168.2.206
+k8s_workers:
+  hosts:
+    k8s1-rhel-worker1.fillswim.local:
+      ansible_host: 192.168.2.214
+    k8s1-rhel-worker2.fillswim.local:
+      ansible_host: 192.168.2.215
 
 k8s1_rhel_cluster:
   children:
-    k8s1_rhel_masters:
-    k8s1_rhel_workers:
+    k8s_masters:
+    k8s_workers:
