--- a/roles/02-High-Availability/tasks/main.yml
+++ b/roles/02-High-Availability/tasks/main.yml
@@ -33,6 +33,7 @@
   ansible.builtin.template:
     src: haproxy.j2
     dest: /etc/haproxy/haproxy.cfg
+    mode: '0644'
   register: haproxy_conf
 
 - name: Enable haproxy
