--- a/roles/Reset-Kubeadm-Cluster/tasks/main.yml
+++ b/roles/Reset-Kubeadm-Cluster/tasks/main.yml
@@ -12,9 +12,92 @@
 - name: Kubeadm Reset
   ansible.builtin.shell: kubeadm reset --force
 
-- name: Delete /etc/cni/net.d
+- name: Delete /etc/kubernetes
   ansible.builtin.file:
-    path: /etc/cni/net.d
+    path: /etc/kubernetes
+    state: absent
+
+- name: Delete ~/kubeadm
+  ansible.builtin.file:
+    path: ~/kubeadm
+    state: absent
+
+- name: Delete ~/download
+  ansible.builtin.file:
+    path: ~/download
+    state: absent
+
+- name: Delete ~/.kube
+  ansible.builtin.file:
+    path: ~/.kube
+    state: absent
+
+# ======================================= Delete  containerd =======================================
+
+- name: crictl rm -f -a
+  ansible.builtin.shell: crictl rm -f -a
+
+- name: crictl rmi --all
+  ansible.builtin.shell: crictl rmi --all
+
+- name: Stop containerd
+  ansible.builtin.systemd_service:
+    name: containerd.service
+    state: stopped
+    enabled: false
+
+- name: Delete containerd
+  file:
+    path: '{{ item }}'
+    state: absent
+  with_items:
+    - /usr/local/bin/containerd
+    - /usr/local/bin/containerd-shim
+    - /usr/local/bin/containerd-shim-runc-v1
+    - /usr/local/bin/containerd-shim-runc-v2
+    - /usr/local/bin/containerd-stress
+    - /usr/local/bin/ctr
+
+- name: Delete /usr/local/lib/systemd/system
+  ansible.builtin.file:
+    path: /usr/local/lib/systemd/system
+    state: absent
+
+- name: Delete /etc/containerd
+  ansible.builtin.file:
+    path: /etc/containerd
+    state: absent
+
+# ========================================== Delete  Runc ==========================================
+
+- name: Delete Runc
+  ansible.builtin.file:
+    path: /usr/local/sbin/runc
+    state: absent
+
+# =========================================== Delete  CNI ==========================================
+
+- name: Delete CNI
+  ansible.builtin.file:
+    path: /opt/cni/bin
+    state: absent
+
+# ========================================= Delete  kubelet ========================================
+
+- name: Stop kubelet
+  ansible.builtin.service:
+    name: kubelet
+    state: stopped
+    enabled: false
+
+- name: Uninstall Kubernetes packages RedHat
+  when: 
+    - ansible_os_family == "RedHat"
+  ansible.builtin.yum:
+    name:
+      - kubectl
+      - kubeadm
+      - kubelet
     state: absent
 
 # ============================================= Reboot =============================================
