--- a/inventory/all_vms.ini
+++ b/inventory/all_vms.ini
@@ -8,6 +8,8 @@
 # ntp                             ansible_host=192.168.2.58
 # nfs                             ansible_host=192.168.2.59
 
+portainer                       ansible_host=192.168.2.79
+
 # nginx_proxy_manager             ansible_host=192.168.2.100
 
 # k8s-alma-master1                ansible_host=192.168.2.201
