--- a/roles/00-preparation-general/tasks/main.yml
+++ b/roles/00-preparation-general/tasks/main.yml
@@ -122,13 +122,13 @@
   when: ansible_os_family == "Debian"
   become: true
   block:
-    ## ======================================= Поменять hostname ========================================
-    #
-    #    - name: Поменять hostname
-    #      become: true
-    #      ansible.builtin.hostname:
-    #        name: "{{inventory_hostname}}"
-    #
+
+    # ======================================= Поменять hostname ========================================
+    
+    - name: Поменять hostname
+      become: true
+      ansible.builtin.hostname:
+        name: "{{inventory_hostname}}"
 
     # ===================================== Добавление репозитория =====================================
 
