--- a/inventory/k8s1_rhel.ini
+++ b/inventory/k8s1_rhel.ini
@@ -4,3 +4,4 @@ k8s1-rhel-master2 ansible_host=192.168.2.212
 k8s1-rhel-master3 ansible_host=192.168.2.213
 k8s1-rhel-worker1 ansible_host=192.168.2.214
 k8s1-rhel-worker2 ansible_host=192.168.2.215
+k8s1-rhel-str-n01 ansible_host=192.168.2.216
