Add proxmox role

--- a/inventory/k8s1_rhel.ini
+++ b/inventory/k8s1_rhel.ini
@@ -1,7 +1,14 @@
 [k8s1_rhel_cluster]
-k8s1-rhel-master1 ansible_host=192.168.2.211
-k8s1-rhel-master2 ansible_host=192.168.2.212
-k8s1-rhel-master3 ansible_host=192.168.2.213
-k8s1-rhel-worker1 ansible_host=192.168.2.214
-k8s1-rhel-worker2 ansible_host=192.168.2.215
-k8s1-rhel-str-n01 ansible_host=192.168.2.216
+# k8s1-rhel-master1 ansible_host=192.168.2.211
+# k8s1-rhel-master2 ansible_host=192.168.2.212
+# k8s1-rhel-master3 ansible_host=192.168.2.213
+
+k8s1-rhel-worker1 ansible_host=192.168.2.216
+k8s1-rhel-worker2 ansible_host=192.168.2.217
+# k8s1-rhel-worker3 ansible_host=192.168.2.218
+# k8s1-rhel-worker4 ansible_host=192.168.2.219
+
+k8s1-rhel-str-n01 ansible_host=192.168.2.221
+k8s1-rhel-str-n02 ansible_host=192.168.2.222
+# k8s1-rhel-str-n03 ansible_host=192.168.2.223
+# k8s1-rhel-str-n04 ansible_host=192.168.2.224
