--- a/inventory/all_vms.ini
+++ b/inventory/all_vms.ini
@@ -8,9 +8,12 @@
 # ntp                             ansible_host=192.168.2.58
 # nfs                             ansible_host=192.168.2.59
 
-portainer                       ansible_host=192.168.2.79
+# portainer                       ansible_host=192.168.2.79
 
 # nginx_proxy_manager             ansible_host=192.168.2.100
+
+dns1                            ansible_host=192.168.2.111
+dns2                            ansible_host=192.168.2.112
 
 # k8s-alma-master1                ansible_host=192.168.2.201
 # k8s-alma-master2                ansible_host=192.168.2.202
